devops/argocd/argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.example.io`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: argocd-http
      passHostHeader: true
      port: 443
  tls:
    secretName: argocd-secret
